# clientServerTcpQt

./: README.md  README.md.txt
tcp_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tcp_client_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
